fix for footer spacing in firefox

--- a/wp-content/themes/ideum/stylesheets/components/_content.scss
+++ b/wp-content/themes/ideum/stylesheets/components/_content.scss
@@ -785,3 +785,8 @@ html[data-useragent*='Chrome'] .blog-post-detail .content-wrapper .pull-quote .p
     padding-top: 0; 
   }
 }
+
+html[data-useragent*='Firefox'] #footer {
+  padding-top: 160px;
+}
+
